# ArknightsSearch-backend

./: .gitignore  LICENSE  README.md  loop.sh  pyproject.toml  ruff.toml  start.py
.github/workflows/: auto_upload.yml
core/: config.py  constant.py  rate_limiter.py  server.py  util.py
core/search/: __init__.py
core/search/story/: data.py  extra.py  http.py  search.py
